[package]
name = "rust_todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rfd = "0.14.0"
windows = "0.54.0"